<resources>
    <string name="app_name">My Chat</string>
    <string name="username">Username</string>
    <string name="new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="iron_chat">IRON CHAT</string>
    <string name="logout">Logout</string>

    <string name="type_message">Type a message</string>
    <string name="profile">Profile</string>
    <string name="find_friend">Find a friend..</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="check_email_after_reset">Check your email after reset.</string>
</resources>
