<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iron_chat"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:id="@+id/btn_login"
        android:background="@color/colorPrimary"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="60dp"
        android:padding="16dp"
        />

</LinearLayout>